--- a/projeto/style.css
+++ b/projeto/style.css
@@ -43,7 +43,8 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     /*height: 720px; não é nescessario a altura na paginas, pois ela se ajusta com os elementos adicionados*/
     margin: 56px auto 0px; /* 56px será a autura, auto será lefth / right e 0px bottom*/
     padding: 0 24px;
